--- a/FrontEnd-FitWell/src/app/components/home/home.component.html
+++ b/FrontEnd-FitWell/src/app/components/home/home.component.html
@@ -1,33 +1,40 @@
 <div class="conteiner-fluid" id="page">
   <div class="row m-0 p-0">
-    <h1 class="ms-4 mt-4 pe-0">Dashboard</h1>
-    <div class="container mt-3" id="data">
-      <div
-        class="card m-4 bg-transparent"
-        style="max-width: 900px; max-height: 181px"
-      >
-        <div class="row g-0">
-          <div class="col-md-3">
-            <img
-              src="{{ user.avatar }}"
-              class="img-fluid rounded-circle ms-4"
-              alt="avatar user"
-              id="avatar"
-            />
+    <div class="container mt-3 mb-2" id="data">
+      <h1 class="ms-3 mt-4">Welcome to Dashboard</h1>
+      <p class="ms-4">Hello {{user.name}} {{user.surname}}, see what do you do today</p>
+    </div>
+    <div class="container" id="anam">
+      <div class="row">
+        <div class="col-4">
+          <div id="weight">
+            <div class="p-3 d-flex alig align-items-center">
+              <i class="fas fa-weight fa-3x"></i>
+              <div class="d-flex flex-column ms-3">
+              <h4 class="m-0">Weight</h4>
+              <p class="m-0">{{user.noteBookD.weight}}</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-9">
-            <div class="card-body text-light">
-              <h5 class="card-title">{{ user.name }} {{ user.surname }}</h5>
-              <div class="continer">
-                <div class="row">
-                  <div class="col-md-6">
-                    <ul>
-                      <li>Gender: {{ user.gender }}</li>
-                      <li>Weight: {{ user.noteBookD.weight }}</li>
-                      <li>Basal Metabolic Rate: {{ user.noteBookD.rmr }}</li>
-                    </ul>
-                  </div>
-                </div>
+        </div>
+        <div class="col-4">
+          <div id="weight">
+            <div class="p-3 d-flex alig align-items-center">
+              <i class="fas fa-fire fa-3x"></i>
+              <div class="d-flex flex-column ms-3">
+              <h4 class="m-0">BMR</h4>
+              <p class="m-0">{{user.noteBookD.rmr}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div id="weight">
+            <div class="p-3 d-flex alig align-items-center">
+              <i class="fas fa-clipboard fa-3x"></i>
+              <div class="d-flex flex-column ms-3">
+              <h4 class="m-0">Workouts card</h4>
+              <p class="m-0">0</p>
               </div>
             </div>
           </div>
@@ -36,20 +43,34 @@
     </div>
   </div>
 
-  <div class="container-fluid p-0 mx-0 my-3 text-light" id="news">
-    <h4 class="m-3 display-6">News</h4>
+  <div class="container-fluid p-0 mx-0 my-3 text-light" id="calendar">
+    <h4 class="m-3 display-6">Calendar</h4>
+    <table class="weekly-calendar">
+      <thead>
+        <tr>
+          <th *ngFor="let day of days" [class.today]="day.isToday" [class]="day.borderClass">
+            <span [class]="day.name === today ? 'today-name' : ''">{{ day.name }}</span>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td *ngFor="let day of days" [class.today]="day.isToday" [class]="day.borderClass"></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div class="container-fluid mx-0 mt-3 pb-4" id="stats">
     <div class="row justify-content-around">
       <div class="col-5" id="workout">
         <div>
-          <canvas id="statsWorkout" class="text-light"></canvas>
+          <canvas id="statsWorkout" class="m-3"></canvas>
         </div>
       </div>
       <div class="col-5" id="diet">
         <div>
-          <canvas id="statsDiet"></canvas>
+          <canvas id="statsDiet" class="m-3"></canvas>
         </div>
       </div>
     </div>
