--- a/FrontEnd-FitWell/src/app/components/home/home.component.scss
+++ b/FrontEnd-FitWell/src/app/components/home/home.component.scss
@@ -4,34 +4,54 @@
     width: 100%;
 
     .row{
-        h1{
-            font-family: sans-serif;
-            width: 250px;
-        }
         #data{
             background-color: #1e1e21;
             width: 90%;
-            height: 200px;
             border-radius: 15px;
 
-            .card{
-                border: none;
-                .row{
-                    .col-md-3{
-                        #avatar{
-                            object-fit: cover;
-                            width: 60%;
-                        }
-                    }
+            h1{
+                font-family: sans-serif;
+                color: #f1f8fa;
+            }
+
+            p{
+                font-family: sans-serif;
+                color: #f1f8fa;
+            }
+        }
+
+        #anam{
+            width: 90%;
+            border-radius: 15px;
+            color: #f1f8fa;
+            .row{
+                #weight{
+                    background-color: #1e1e21;
+                    border-radius: 15px;
                 }
             }
         }
     }
 
-    #news{
+    #calendar{
         background-color: #1e1e21;
         width: 100%;
         height: 250px;
+        .weekly-calendar {
+            width: 95%;
+            border-collapse: collapse;
+            margin-inline: auto;
+          }
+          
+          .weekly-calendar th, .weekly-calendar td {
+            border: 1px solid #f1f8fa;
+            padding: 10px;
+            text-align: center;
+          }
+          
+          .today-name {
+            color: rgb(0, 255, 64); /* Cambia il colore del testo per il giorno odierno */
+          }
     }
 
     #stats{
@@ -39,19 +59,15 @@
             #workout{
                 background-color: #1e1e21;
                 border-radius: 20px;
-                height: 300px;
                 #statsWorkout{
                     width: 100%;
-                    margin-top: 50px;
                 }
             }
             #diet{
                 background-color: #1e1e21;
                 border-radius: 20px;
-                height: 300px;
                 #statsDiet{
                     width: 100%;
-                    margin-top: 50px;
                 }
             }
         }
