start save and generate cardWorkout

--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
@@ -39,7 +39,7 @@
               <li class="nav-item" *ngIf="user">
                 <a
                   class="nav-link"
-                  [routerLink]="['/profile']"
+                  [routerLink]="['/workout']"
                   routerLinkActive="active"
                 >
                   <i class="fas fa-dumbbell"></i>
