--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
@@ -59,7 +59,7 @@
               <li class="nav-item" *ngIf="user">
                 <a
                   class="nav-link"
-                  [routerLink]="['/backoffice']"
+                  [routerLink]="['/diet']"
                   routerLinkActive="active"
                 >
                   <i class="fas fa-utensils"></i>
