--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
@@ -49,7 +49,7 @@
               <li class="nav-item" *ngIf="user?.role?.includes('COACH')">
                 <a
                   class="nav-link"
-                  [routerLink]="['/backoffice']"
+                  [routerLink]="['/card']"
                   routerLinkActive="active"
                 >
                   <i class="bi bi-card-text"></i>
