--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
@@ -69,7 +69,7 @@
               <li class="nav-item" *ngIf="user?.role?.includes('NUTRITIONIST')">
                 <a
                   class="nav-link"
-                  [routerLink]="['/backoffice']"
+                  [routerLink]="['/card-diet']"
                   routerLinkActive="active"
                 >
                   <i class="bi bi-card-list"></i>
