--- a/FrontEnd-FitWell/src/styles.scss
+++ b/FrontEnd-FitWell/src/styles.scss
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "bootstrap/scss/bootstrap";
+
+
+#page{
+    background-color: #f1f8fa;
+    height: 100vh;
+    width: 100%;
+}
