--- a/FrontEnd-FitWell/src/app/components/diet-nutritionist/diet-nutritionist.component.html
+++ b/FrontEnd-FitWell/src/app/components/diet-nutritionist/diet-nutritionist.component.html
@@ -153,7 +153,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="dietForm">
+        <form [formGroup]="dietForm" (ngSubmit)="saveDiet()">
           <div class="mb-3">
             <label for="inputnumberMeals" class="form-label">N. Meals: </label>
             <input
@@ -288,7 +288,7 @@
                   aria-expanded="true"
                   [attr.aria-controls]="'collapse' + i"
                 >
-                  Nutrient #{{ panel }}
+                  Recipe #{{ panel }}
                 </button>
               </h2>
               <div
@@ -310,7 +310,7 @@
               class="btn btn-outline-dark"
               (click)="addPanelD()"
             >
-              Add Nutrient
+              Add Recipe
             </button>
             <button type="submit" class="btn btn-primary">Generate</button>
           </div>
