--- a/FrontEnd-FitWell/src/app/components/recipe/recipe.component.html
+++ b/FrontEnd-FitWell/src/app/components/recipe/recipe.component.html
@@ -3,31 +3,31 @@
     <div class="mb-3">
       <label for="inputname" class="form-label">Name: </label>
       <input
-        type="number"
+        type="text"
         name="name"
         class="form-control"
         id="inputname"
         formControlName="name"
       />
     </div>
-    <div class="accordion mb-3" id="Set">
+    <div class="accordion mb-3" id="Ingredient">
         <div class="accordion-item" *ngFor="let panel of panels; let i = index">
           <h2 class="accordion-header">
             <button
               class="accordion-button"
               type="button"
               data-bs-toggle="collapse"
-              [attr.data-bs-target]="'#Setcollapse' + i"
+              [attr.data-bs-target]="'#IngredientCollapse' + i"
               aria-expanded="true"
               [attr.aria-controls]="'collapse' + i"
             >
-              Set #{{ panel }}
+              Ingredient #{{ panel }}
             </button>
           </h2>
           <div
-            [id]="'Setcollapse' + i"
+            [id]="'IngredientCollapse' + i"
             class="accordion-collapse collapse show"
-            data-bs-parent="#Set"
+            data-bs-parent="#Ingredient"
           >
             <div class="accordion-body">
               <ng-container>
@@ -39,12 +39,12 @@
       </div>
       <button
         type="button"
-        class="btn btn-outline-light"
+        class="btn btn-outline-dark"
         (click)="addPanel()"
       >
-        Add Set
+        Add Ingredient
       </button>
-    <button type="submit" class="btn btn-success" *ngIf="!id">Save set</button>
+    <button type="submit" class="btn btn-success" *ngIf="!id">Save recipe</button>
     <button type="button" class="btn btn-info" *ngIf="id">Mod set</button>
   </form>
 </div>
