--- a/FrontEnd-FitWell/src/app/components/details-card/details-card.component.html
+++ b/FrontEnd-FitWell/src/app/components/details-card/details-card.component.html
@@ -16,13 +16,16 @@
   </div>
 
   <button
-          type="button"
-            class="btn btn-outline-info"
-            data-bs-toggle="modal"
-            data-bs-target="#ModifyCard"
-          >
-            Modify
-          </button>
+    type="button"
+    class="btn btn-outline-info"
+    data-bs-toggle="modal"
+    data-bs-target="#ModifyCard"
+  >
+    Modify
+  </button>
+  <button type="button" class="btn btn-outline-info" (click)="saveWorkout()">
+    Save Workout
+  </button>
 </div>
 
 <div
@@ -81,7 +84,11 @@
               >
                 <div class="accordion-body">
                   <ng-container>
-                    <app-workout [exercisesName]="exercisesName" [index]="i" [cardByParent]="card"></app-workout>
+                    <app-workout
+                      [exercisesName]="exercisesName"
+                      [index]="i"
+                      [cardByParent]="card"
+                    ></app-workout>
                   </ng-container>
                 </div>
               </div>
@@ -109,7 +116,13 @@
             />
           </div> -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline-light" (click)="addWorkout()">Add Exercise</button>
+            <button
+              type="button"
+              class="btn btn-outline-light"
+              (click)="addWorkout()"
+            >
+              Add Exercise
+            </button>
             <button type="submit" class="btn btn-success">Mod card</button>
           </div>
         </form>
