--- a/FrontEnd-FitWell/src/app/components/home/home.component.html
+++ b/FrontEnd-FitWell/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
               <i class="fas fa-clipboard fa-3x"></i>
               <div class="d-flex flex-column ms-3">
               <h4 class="m-0">Workouts card</h4>
-              <p class="m-0">0</p>
+              <p class="m-0">{{cardWorkout.length}}</p>
               </div>
             </div>
           </div>
@@ -64,9 +64,21 @@
   <div class="container-fluid mx-0 mt-3 pb-4" id="stats">
     <div class="row justify-content-around">
       <div class="col-5" id="workout">
-        <div>
-          <canvas id="statsWorkout" class="m-3"></canvas>
-        </div>
+        <div id="carouselworkout" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item" *ngFor="let workout of cardWorkout; let i = index" [class.active]="i === 0">
+                  <div>
+                      <canvas [id]="'statsWorkout' + i" class="m-3" #canvas></canvas>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselworkout" data-bs-slide="prev">
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselworkout" data-bs-slide="next">
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
       </div>
       <div class="col-5" id="diet">
         <div>
