add details macro diet

--- a/FrontEnd-FitWell/src/app/components/details-exercise/details-exercise.component.html
+++ b/FrontEnd-FitWell/src/app/components/details-exercise/details-exercise.component.html
@@ -1,6 +1,6 @@
 <p>details-exercise works!</p>
 <div class="conteiner-fluid position-relative" id="page">
-    <ul class="list-group" *ngFor="let set of workout.sets">
+    <ul class="list-group" *ngFor="let set of workout?.sets">
         <li class="list-group-item">
             <div class="d-flex justify-content-between">
                 <p>Rep:{{ set.rep }}</p>
