--- a/FrontEnd-FitWell/src/app/components/diet-details/diet-details.component.scss
+++ b/FrontEnd-FitWell/src/app/components/diet-details/diet-details.component.scss
@@ -2,4 +2,10 @@
     background-color: #f1f8fa;
     height: 100vh;
     width: 100%;
+    #nutrient{
+        width: 300px;
+        #Macro{
+            width: 100%;
+        }
+    }
 }
