mod autorization on card

--- a/FrontEnd-FitWell/src/app/components/details-card/details-card.component.html
+++ b/FrontEnd-FitWell/src/app/components/details-card/details-card.component.html
@@ -20,6 +20,7 @@
     class="btn btn-outline-info"
     data-bs-toggle="modal"
     data-bs-target="#ModifyCard"
+    *ngIf="!card.coach"
   >
     Modify
   </button>
